fixed colors, some contrast and text weight/size

--- a/src/Home.css
+++ b/src/Home.css
@@ -43,20 +43,8 @@ body::-webkit-scrollbar{
     height: 100%;
 }
 
-.container-start-button{
-    position: absolute;
-    top: 23vw;
-}
-.start-button{
-    cursor: pointer;
-    border-radius: 20px;
-    border: 3px solid black;
-    padding: 10px;
-    background-color: #6a0000;
-    color: black;
-    height: 70px;
-    box-shadow: 0px 15px 4px rgba(0, 0, 0, 0.4)
-}
+
+
 /* SEZIONE DELL AVVENTURA */
 
 
@@ -77,14 +65,14 @@ body::-webkit-scrollbar{
     align-items: center;
 }
 .text-adventure{
-    margin: 10px 0px;
-    width: 80%;
+    margin: 14px 0px;
+    width: 85%;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
     margin-bottom: 20px;
 }
-.text-adventure>p{
+.text-adventure>p, .text-adventure>h2{
     font-size: 20px;
     font-weight:bold;
     color: #000000;
@@ -98,7 +86,7 @@ body::-webkit-scrollbar{
     border: 5px solid black;
     border-radius: 40px;
     height: 100%;
-    width: 300px;
+    width: 280px;
     background-color: rgb(168, 137, 111);
     box-shadow: 18px 18px 4px rgba(0, 0, 0, 0.3)
 }
@@ -106,24 +94,28 @@ body::-webkit-scrollbar{
 .character-img>img{
     border-top-right-radius: 36px;
     border-top-left-radius: 36px;
-    height: 400px;
+    height: 380px;
     width: 100%;
 }
 .text-card{
-    margin-bottom: 10px;
+    margin-bottom: 4px;
     padding: 5px;
     display: flex;
     text-align: center;
     flex-direction: column;
 }
-.characters-name{
+.characters-name>p{
+    font-size: 30px;
+    font-weight: bold;
+}
+.characters-nickname>p{
+    margin-bottom: 8px;
+    font-size: 24px;
+    font-weight:800;
+}
+.characters-description>h3{
     font-size: 20px;
-}
-.characters-nickname{
-    margin-bottom: 10px;
-}
-.characters-description{
-    font-size: 13px;
+    font-weight: bold;
 }
 .container-hero{
     width: 80%;
@@ -148,7 +140,7 @@ body::-webkit-scrollbar{
     padding-bottom: 20px;
 }
 .container-game{
-    background-color: rgb(188, 158, 122); 
+    background-color: var(--clr-bg-container-game);
     width: 75%;
     display: flex;
     align-items: center;
@@ -161,24 +153,43 @@ body::-webkit-scrollbar{
     align-items: center;
 }
 .text-game{
-    font-size: 22px;
+    font-size: 20px;
+    font-weight: 700;
     margin: 10px 0px;
     width: 100%;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    margin-bottom: 20px;
+    margin-bottom: 16px;
 }
 .container-hero{
     display: flex;
     flex-direction: column;
     align-items: center;
 }
+
+
 /* BOTTONI */
+
+
+.container-start-button{
+    position: absolute;
+    top: 23vw;
+}
+.start-button{
+    cursor: pointer;
+    border-radius: 20px;
+    border: 3px solid rgb(10, 10, 10);
+    padding: 10px;
+    background-color: #920c0c;
+    color: black;
+    height: 70px;
+    box-shadow: 0px 15px 4px rgba(0, 0, 0, 0.4);
+}
 
 .container-continue-button{
     cursor: pointer;
-    width: 80%;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -186,6 +197,9 @@ body::-webkit-scrollbar{
     margin: 15px;
 }
 .button-continue{
+    background-color: rgb(216, 214, 214);
+    font-weight: 800;
+    border: 3px solid black;
     border-radius: 4px;
     cursor: pointer;
     display: flex;
